[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/wep1.png" type="Texture" id=1]
[ext_resource path="res://scripts/wep1.gd" type="Script" id=2]
[ext_resource path="res://sprites/bul_effect1.png" type="Texture" id=3]
[ext_resource path="res://audio/sfx/475157__trxone__pulse-rifle-2.wav" type="AudioStream" id=4]

[node name="wep1" type="Node2D" groups=[
"weapon",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6.875, -0.4375 )
texture = ExtResource( 1 )

[node name="shoot_pos" type="Position2D" parent="."]
position = Vector2( 20.4375, -3 )

[node name="shoot" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="shoot_eff" type="Sprite" parent="."]
visible = false
position = Vector2( 20.339, -3 )
texture = ExtResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
[connection signal="timeout" from="shoot" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
